--- a/lAB.html
+++ b/lAB.html
@@ -3,7 +3,7 @@
 <head>
  <meta charset="utf-8">
  <title>TO-DO LIST</title>
- <link rel="stylelist" href="stylelist">
+ <link rel="stylesheet" href="G:/lab/stylelist.css">
 </head>
 <body>
 <div id="myDIV" class="header">
@@ -19,5 +19,8 @@
   <li><input type="checkbox" unchecked>убрать снег</li>
   <li><input type="checkbox" unchecked>поесть</li>
 </ul>
+<p><br><a href="piccat"><img src="G:/lab/kitty.jpg"
+  width="189" height="255"></a></br>
+  kitty go....</p>
 <body>
   </html>
