--- a/lAB.html
+++ b/lAB.html
@@ -19,8 +19,7 @@
   <li><input type="checkbox" unchecked>убрать снег</li>
   <li><input type="checkbox" unchecked>поесть</li>
 </ul>
-<p><br><a href="piccat"><img src="G:/lab/kitty.jpg"
-  width="189" height="255"></a></br>
-  kitty go....</p>
+<a href="piccat"><img src="G:/lab/kitty.jpg"></a>
+  <br><p>kitty go....</p><br>
 <body>
   </html>
